fix example value
